--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.52",
     "@rocketseat/unform": "^1.5.1",
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.2",
@@ -63,6 +66,6 @@
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
     "prettier": "^1.18.2",
-    "react-app-rewired": "^2.1.5"
+    "react-app-rewired": "^2.1.6"
   }
 }
