--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "polished": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-circular-progressbar": "^2.0.3",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.8.6",
@@ -28,6 +29,7 @@
     "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.5",
+    "rsuite": "^4.6.0",
     "styled-components": "^4.3.2",
     "yup": "^0.27.0"
   },
